--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solar-icons/react": "^1.0.1",
+    "@svgr/webpack": "^8.1.0",
+    "next": "15.3.1",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4"
   }
