--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "form-data": "^4.0.3",
     "form-data-encoder": "^4.1.0",
     "formdata-node": "^6.0.3",
+    "framer-motion": "^12.23.0",
     "next": "15.3.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "^19.0.0",
